--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -57,7 +57,7 @@
   
   /* end header styles */
   
-
+/* hero styles */
 .hero {
     height: 800px;
     width: 100%;
@@ -65,23 +65,50 @@
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-}
-
-.float-left {
+  }
+  /* end hero styles */
+  
+  /* what-we-do styles */
+  
+  /* what-we-do images */
+  .float-left {
     float: left;
     margin-right: 25px;
-}
-
-.float-right {
+  }
+  
+  .float-right {
     float: right;
     margin-left: 25px;
-}
-
-.content {
+  }
+  
+  .what-we-do {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-}
+  }
+  
+  /* what-we-do sections */
+  .what-we-do-section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+  }
+  
+  /* what-we-do images */
+  .what-we-do-img {
+    max-height: 200px;
+    max-width: 100%;
+  }
+  
+  /* what-we-do headers */
+  .what-we-do h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+  }
+  /* end what-we-do */
 
 .benefits {
     margin-right: 20px;
