--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,23 @@
+/* styling for entire page */
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+/* end styling for entire page */
+
+/* body styling */
 .body-style {
   background-color: #d9dcd6;
 }
+/* end of body styling */
 
+/* small text font */
 .small-text {
   font-size: 16px;
 }
+/* end of small text font */
 
 /* header styles */
 
@@ -30,8 +37,9 @@
 .header h1 .seo {
   color: #d9dcd6;
 }
+/* end header styles */
 
-/*nav style*/
+/*nav styles*/
 
 .header nav {
   padding-top: 15px;
@@ -55,7 +63,7 @@
   text-decoration: none;
 }
 
-/* end header styles */
+/* end nav styles */
 
 /* hero styles */
 .hero {
@@ -70,7 +78,6 @@
 
 /* what-we-do styles */
 
-/* what-we-do images */
 .float-left {
   float: left;
   margin-right: 25px;
@@ -87,7 +94,6 @@
   margin-left: 20px;
 }
 
-/* what-we-do sections */
 .what-we-do-section {
   margin-bottom: 20px;
   padding: 50px;
@@ -97,13 +103,11 @@
   color: #ffffff;
 }
 
-/* what-we-do images */
 .what-we-do-img {
   max-height: 200px;
   max-width: 100%;
 }
 
-/* what-we-do headers */
 .what-we-do h2 {
   margin-bottom: 20px;
   font-size: 36px;
@@ -133,7 +137,6 @@
   text-align: center;
 }
 
-/* benefit imgs styles */
 .benefit-img {
   display: block;
   margin: 10px auto;
